# tox-teamcity

./: .gitignore  README.md  setup.cfg  setup.py  tox.ini
docs/: index.rst
src/tox_teamcity/: plugin.py
tests/integration/: test_tox_teamcity_int.py
tests/unit/: test_version.py
