[metadata]
name = tox-teamcity
version = attr: tox_teamcity.version.__version__
description = Tox plugin for better integration with TeamCity CI server.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = virtual, environments, isolated, testing, tox, teamcity
maintainer = Morgan Wahl
maintainer-email = morgan@eml.cc
author = Morgan Wahl
author-email = morgan@eml.cc
url = http://tox-teamcity.readthedocs.org
project_urls =
    Source=https://github.com/morganwahl/tox-teamcity
    Tracker=https://github.com/morganwahl/tox-teamcity/issues
platforms = any
license = GNU GPL v3.0
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: tox
    Intended Audience :: Developers
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    Operating System :: OS Independent
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
package_dir =
  =src
zip_safe = True
python_requires = >=3.4
install_requires =
    tox>=3.12.2
    teamcity-messages>=1.7

[options.packages.find]
where = src

[options.entry_points]
tox =
    tox_teamcity=tox_teamcity.plugin

[options.extras_require]
testing =
    pytest >= 4.0.0, <6
    pytest-cov >= 2.5.1, <3
    pytest-mock >= 1.10.0, <2
    pytest-xdist >= 1.22.2, <2
docs =
    sphinx >= 2.0.0, < 3
    towncrier >= 18.5.0
    pygments-github-lexers >= 0.0.5
    sphinxcontrib-autoprogram >= 0.1.5

[bdist_wheel]
universal = 1
